# IOT_B-L475E-IOT01A_ZEPHYR_OS

./: 00.sta_app.ps1  CMakeLists.txt  README.md  prj.conf
boards/st/trr_l475_iot1/: Kconfig.defconfig  Kconfig.trr_l475_iot1  board.yml  trr_l475_iot1.dts  trr_l475_iot1.yaml
boards/st/trr_l475_iot1/doc/: index.rst
code/app_mcu/00.src/: app_main.cpp
code/app_mcu/00.src/drv/: dev_lsm6dsl.cpp  drv_gpio.cpp  drv_hci_spi.cpp  drv_hts221.cpp  drv_lis3dl.cpp  drv_lps22hb.cpp  drv_network.cpp  drv_st_bt_sns.cpp  drv_vl53l0x.cpp  drv_wdt.cpp
code/app_mcu/00.src/tsk/: tsk_bt_le.cpp  tsk_dat_acq.cpp  tsk_env_sns.cpp  tsk_mqtt.cpp  tsk_ota.cpp  tsk_sys.cpp  tsk_wifi.cpp
code/app_mcu/00.src/utl/: tsk_utl.cpp
code/app_mcu/01.inc/drv/: drv_gpio.hpp  drv_hci_spi.hpp  drv_hts221.hpp  drv_lis3dl.hpp  drv_lps22hb.hpp  drv_lsm6dsl.hpp  drv_network.hpp  drv_st_bt_sns.hpp  drv_vl53l0x.hpp  drv_wdt.hpp
code/app_mcu/01.inc/dt/: dt_cfg.hpp
code/app_mcu/01.inc/tsk/: tsk_bt_le.hpp  tsk_dat_acq.hpp  tsk_env_sns.hpp  tsk_mqtt.hpp  tsk_ota.hpp  tsk_sys.hpp  tsk_wifi.hpp
code/app_mcu/01.inc/utl/: tsk_utl.hpp
code/app_mcu/02.cfg/: tsk_cfg.hpp
code/app_mcu/02.cfg/dt/: dt_cfg.cpp
